Fix rtl alignment and add font select in text editor and comment box

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -141,3 +141,26 @@
 		content: none;
 	}
 }
+
+// Fix rtl alignmentss
+//------------------------------------
+.control-input {
+  direction: ltr;
+}
+
+.ql-container {
+  direction: ltr;
+}
+
+.ql-editor ol li.ql-direction-rtl{
+  padding-right: 0;
+}
+
+.ql-editor {
+  padding: 12px 20px;
+}
+
+.page-body {
+  overflow-x: visible;
+}
+//------------------------------------
